--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/firebase": "^8.2.2",
     "@nuxtjs/pwa": "^3.3.5",
+    "apexcharts": "^3.44.0",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
+    "vue-apexcharts": "^1.6.2",
     "vue-server-renderer": "^2.7.10",
     "vue-sweetalert2": "^5.0.5",
     "vue-template-compiler": "^2.7.10",
